# iamcompact-nomenclature

./: .gitignore  README.md  mount_dvc_remote.sh  pyproject.toml  umount_dvc_remote.sh
.dvc/: config
docs/: index.html  model_codelist.html  scenario_codelist.html  variable_codelist.html
iamcompact_nomenclature/: __init__.py  _region_adjustments.py  aggregation.py  default_definitions.py  mapping.py  multi_load.py  validation.py  var_utils.py
iamcompact_nomenclature/data/common-definitions-fork/: .gitignore  nomenclature.yaml
iamcompact_nomenclature/data/definition_repos/: .gitignore  nomenclature.yaml
iamcompact_nomenclature/data/definitions/: multi_load.py
iamcompact_nomenclature/data/iamcompact-nomenclature-definitions/: .gitignore  nomenclature.yaml
iamcompact_nomenclature/data/mappings/: GCAM_7.0.yaml  GCAM_7.1.yaml  IAM_COMPACT_D4.3.yaml  IIASA-WiC_POP_2023.yaml  OECD_ENV-Growth_2023.yaml  TIAM_Grantham.yaml  image_v3.2.yaml  limes_v2.38.yaml  prometheus_1.2.yaml
iamcompact_nomenclature/dsd_utils/: __init__.py  codelist_formatter.py  test_output.md
iamcompact_nomenclature/vetting/: __init__.py  vetter_base.py
scripts/: all_vars_20240406T1705.txt  ar6vars.txt  common_definitions_vars_0f41e8c.txt  convert_common_definitions_region_file.py  debug_check_var_aggregates.py  explore_result_files_for_nomenclature.py  find_common_definitions_duplicates.py  generate_codelist_docs.py  generate_varlist_html_table.py  invalid_var_files_20240406T1705.txt  invalid_vars_20240406T1705.txt  make_countries_yaml.py  openentrance_vars_5d994bb.txt  var_files_20240406T1705.txt
scripts/national_teams_validation_20250610/: .gitignore  Requested_variables_status.xlsx.dvc  Variables_national_teams_20250526.xlsx.dvc  find_national_teams_missing_variables_20250610.py
scripts/study_results/: .gitignore  all_var_files.txt  all_vars.txt  data_dict.pkl.dvc  invalid_var_files.txt  invalid_vars.txt
scripts/study_results/S01_NECPs/: .gitignore  Report_IAM_COMPACT_PROMETHEUS_regions_nolinksv1.xlsx.dvc  Report_IAM_COMPACT_PROMETHEUS_regions_nolinksv2.xlsx.dvc  iam_compact_st1__GCAM_iamc_report.xlsx.dvc  iamcom_st1results_TIAM.xlsx.dvc  master_file_globalresults.xlsx.DONTUSEYET.dvc
scripts/study_results/S03_Geopolitics_causing_tech_delay/: .gitignore  GCAMoutput_study3_EU27.xlsx.dvc  MARIO - Tech prices & Materials demand - Rev - Global.xlsx.dvc  Report_IAM_COMPACT_PROMETHEUS_regions_nolinksv1.xlsx.dvc  Report_IAM_COMPACT_PROMETHEUS_regions_nolinksv4.xlsx.dvc  TIAM_study3_results.xlsx.dvc
scripts/study_results/S04_EU_industry_and_hydrogen/: .gitignore  GCAM_study4_data_310124.xlsx.dvc  iamcom_st4results_TIAM.xlsx.dvc
(+44 files in other folders)
