[project]
name = "iamcompact-nomenclature"
version = "0.8.8"
description = "Data structure definition for validation of model outputs in the HORIZON EUROPE project IAM COMPACT, using nomenclature-iamc"
authors = [
    { name = "Jan Ivar Korsbakken", email = "janko@cicero.oslo.no" }
]
dependencies = [
    # We need a custom branch of nomenclature-iamc until it is merged and published as a new version,
    # to avoid validation errors on region mappings with non-ASCII characters on Windows.
    "nomenclature-iamc @ git+https://github.com/ciceroOslo/nomenclature@406_specify_consistent_encoding",
    "pyam-iamc>=2.2"
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipython>=8.20.0",
    "pytest>=8.0.0",
    "ipykernel>=6.29.0",
    "dvc[ssh]>=3.48.4"
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["iamcompact_nomenclature"]
